...
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
                android:id="@+id/nav_recording"
                android:icon="@drawable/ic_record"
                android:title="Recording"/>
        <item
                android:id="@+id/nav_devices"
                android:icon="@drawable/ic_devices"
                android:title="Devices"/>
        <item
                android:id="@+id/nav_calibration"
                android:icon="@drawable/ic_calibrate"
                android:title="Calibration"/>
        <item
                android:id="@+id/nav_files"
                android:icon="@drawable/ic_folder"
                android:title="Files"/>
    </group>

    <item android:title="Settings">
        <menu>
            <item
                    android:id="@+id/nav_settings"
                    android:icon="@drawable/ic_settings"
                    android:title="App Settings"/>
            <item
                    android:id="@+id/nav_network_config"
                    android:icon="@drawable/ic_network"
                    android:title="Network Config"/>
            <item
                    android:id="@+id/nav_shimmer_settings"
                    android:icon="@drawable/ic_settings"
                    android:title="Shimmer Settings"/>
            <item
                    android:id="@+id/nav_shimmer_visualization"
                    android:icon="@drawable/ic_chart"
                    android:title="Shimmer Visualization"/>
        </menu>
    </item>

    <item android:title="System">
...
